# kframe

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cicd.yml  dev_ci.yml  main_build.yml  main_cd.yml  main_ci.yml  main_cicd.yml  main_on_pre_release.yml  main_pre_release.yml  main_release.yml  qa_cicd copy.yml  qa_cicd.yml
src/kframe/: __about__.py
src/kframe/api/: apitools.py
src/kframe/config/: configattr.py  configentity.py
